--- a/app/templates/carrier/all.html
+++ b/app/templates/carrier/all.html
@@ -25,7 +25,7 @@
         </ul>
     </div>
     <div class="row">&nbsp;</div>
-    <div class="row">
+    <!--<div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -34,6 +34,6 @@
                 {% include 'partials/load_board.html' %}
             </div>
         </div>
-    </div>
+    </div>-->
     
             {% endblock %}
