set status method

--- a/app/templates/base_view_fleet.html
+++ b/app/templates/base_view_fleet.html
@@ -122,6 +122,14 @@
 
                     map.controls[google.maps.ControlPosition.CENTER].push(myTextDiv);
                 }
+                else {
+                    var bounds = new google.maps.LatLngBounds();
+                    for(i=0; i < allMarkers.length; i++) {
+                        bounds.extend(allMarkers[i].getPosition())
+                    }
+                    map.fitBounds(bounds)
+
+                }
 
             }
 
