--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -110,6 +110,7 @@
                           mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
                         }
                     };
+                
 
 
                     var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -129,7 +130,16 @@
 
                     map.controls[google.maps.ControlPosition.CENTER].push(myTextDiv);
                 }
+                else {
+                    var bounds = new google.maps.LatLngBounds();
+                    for(i=0; i < allMarkers.length; i++) {
+                        bounds.extend(allMarkers[i].getPosition())
+                    }
+                    map.fitBounds(bounds)
+
+                }
             }
+
 
 
             google.maps.event.addDomListener(window, 'load', initialize);
