--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -13,53 +13,6 @@
             <i class="clip-pie"></i>
             Load Board
         </div>-->
-            <div class="table-responsive">
-                <table class="table table-bordered table-hover table-striped table-condensed" id="sample-table-1">
-                    <thead>
-                        <tr>
-                            <th>Load ID</th>
-                            <th>Origin</th>
-                            <th>Destination</th>
-                            <th>Driver</th>
-                            <th>Status</th>
-                            <th>&nbsp</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for load in loads %}
-                            <tr>
-                                <td><a href="{{ url_for('loads.view', load_id=load.id) }}">{{ load.id }}</a></td>
-                                {% if load.lane.locations.count() > 0 %}
-                                    <td>{{ load.lane.locations[0].address.city }}, {{ load.lane.locations[0].address.state }} {{ load.lane.locations[0].address.postal_code }}</td>
-                                    <td>{{ load.lane.locations[-1].address.city }}, {{ load.lane.locations[-1].address.state }} {{ load.lane.locations[-1].address.postal_code }}</td>
-                                {% else %}
-                                    <td></td>
-                                    <td></td>
-                                {% endif %}
-                                <td>
-                                    {% if load.truck is none %}
-                                        Unassigned
-                                    {% else %}
-                                        <a href="{{ url_for('drivers.view', driver_id=load.truck.driver.id) }}">{{ load.truck.driver.get_full_name() }}
-                                    {% endif %}
-                                </td>
-                                <td>{{ load.getStatus() }}</td>
-                                <td>
-                                    {% if load.getStatus() == "Invoiced" %}
-                                        <a href="{{ url_for('loads.complete', load_id=load.id) }}" class="btn btn-primary btn-mini ">Complete</a>
-                                    {% elif load.getStatus() == "Delivered" %}
-                                        <a href="{{ url_for('loads.invoice', load_id=load.id) }}" class="btn btn-primary btn-mini ">Invoiced</a>
-                                    {% endif %}
-                                    {% if load.getStatus != "Complete" and load.getStatus() != "Invoiced" %}
-                                        <a href="{{ url_for('loads.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
-                                    
-                                        <a href="{{ url_for('loads.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+            {% include 'partials/load_board.html' %}
     <!--</div>-->
             {% endblock %}
