--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -31,6 +31,11 @@
                                         <span class="title"> Load Board </span>
                                     </a>
                                 </li>
+                               <!-- <li>
+                                    <a href="{{ url_for('loads.export') }}">
+                                        <span class="title"> Export Loads </span>
+                                    </a>
+                                </li>-->
                             </ul>
                         </li>
                         <li {% if active == "Trucks" %}class="active open" {% endif%}>
