--- a/app/templates/load/view2.html
+++ b/app/templates/load/view2.html
@@ -415,47 +415,23 @@
 								</tbody>
 							</table>
 				    	{% else %}
-				    		<table class="table table-striped table-condensed">
-		        				<thead>
-		        					<tr>
-		        						<th>Truck</th>
-		        						<th>Driver</th>
-		        						{% if not is_dispatch %}
-		        							<th>Quote</th>
-		        						{% endif %}
-		        						<th>&nbsp</th>
-		        					</tr>
-									</thead>
-									<tbody>
-										{% if carriers|length == 0 %}
-										<tr>
-											<td colspan="3">There are no trucks available for this load</td>
-										</tr>
-										{% else %}
-		 								{% for carrier in carriers %}
-		 								<tr class="odd gradeX">
-		 									<td><a href="{{ url_for('trucks.view', truck_id=carrier.id) }}">{{ carrier.name }}</a></td>
-		 									<td>
-		 											{% if carrier.driver is none %}
-		 												Unassigned
-		 											{% else %}
-		 												<a href="{{ url_for('drivers.view', driver_id=carrier.driver.id) }}">{{ carrier.driver.get_full_name() }}</a>
-		 											{% endif %}
-		 									</td>
-		 									{% if not is_dispatch %}
-		 										<td>{{ bid.value }}</td>
-		 									{% endif %}
-		 									
-		 									<td>
-		 										{% if is_dispatch and load.truck is none %}
-		   			 								<a href="{{ url_for('loads.assign', load_id=load.id, assign_id=carrier.id)}}" onclick="return confirm("Assign this carrier to this load?")" class="btn btn-success btn-mini success">Assign</a>
-		   			 							{% endif %}
-		                                    </td>
-		 								</tr>
-		 								{% endfor %}
-		 							{% endif %}
-									</tbody>
-		        			</table>
+				    		<table class="table table-condensed table-hover">
+								<thead>
+									<tr>
+										<th colspan="2">Truck</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td><b>Name:</b></td>
+										<td>Not Assigned</td>
+									</tr>
+									<tr>
+										<td><b>Driver:</b></td>
+										<td>Not Assigned</td>
+									</tr>
+								</tbody>
+							</table>
 				    	{% endif %}
 						
 					</div>
