--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -17,18 +17,27 @@
 													</a>
 													<label for="submit" class="btn btn-primary">Submit</label>
 												{% else %}
-													<a href="{{ url_for('loads.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
-													<a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
-														Add Location <i class="fa fa-plus"></i>
-													</a>
+													{% if not hide %}
+														<a href="{{ url_for('loads.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
+														<a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
+															Add Location <i class="fa fa-plus"></i>
+														</a>
 
-													<a href="{{ url_for('.assign_driver', load_id=load.id) }}" class="new-modal btn btn-green">
-														Assign Driver <i class="fa fa-plus"></i>
-													</a>
-													
-													{% if load.truck is not none %}
-														<a href="javascript:ping_driver({{ load.truck.driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
+														{% if load.truck is not none %}
+															<a href="{{ url_for('.assign_driver', load_id=load.id) }}" class="new-modal btn btn-danger">
+																Change Driver <i class="fa fa-minus"></i>
+															</a>
+														{% else %}
+															<a href="{{ url_for('.assign_driver', load_id=load.id) }}" class="new-modal btn btn-green">
+																Assign Driver <i class="fa fa-plus"></i>
+															</a>
+														{% endif %}
+															{% if load.truck is not none %}
+															<a href="javascript:ping_driver({{ load.truck.driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
+														{% endif %}
 													{% endif %}
+													
+													
 												{% endif %}
 
 												
