--- a/app/templates/static/404.html
+++ b/app/templates/static/404.html
@@ -38,65 +38,8 @@
 	</head>
 	<!-- end: HEAD -->
 	<body>
-		<!-- start: HEADER -->
-		<header class="single-menu">
-			<div role="navigation" class="navbar navbar-default navbar-fixed-top">
-				<!-- start: TOP NAVIGATION CONTAINER -->
-				<div class="container">
-					<div class="navbar-header">
-						<!-- start: RESPONSIVE MENU TOGGLER -->
-						<button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<!-- end: RESPONSIVE MENU TOGGLER -->
-						<!-- start: LOGO -->
-						<a class="navbar-brand" href="{{ url_for('static.index') }}">
-							<img src="{{ static('frontend/images/wht_logo-n-txt_210x50_72ppi.png') }}">
-						</a>
-						<!-- end: LOGO -->
-					</div>
-					<div class="navbar-collapse collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li class="">
-								<a href="{{ url_for('static.index') }}">
-									HOME
-								</a>
-							</li>
-							<li class="">
-								<a class="" href="{{ url_for('static.features') }}">
-									LEARN MORE
-								</a>
-							</li>
-							<li class="">
-								<a class="" href="{{ url_for('static.demo') }}">
-									GET A DEMO
-								</a>
-							</li>
-							<li class="">
-								<a class="" href="{{ url_for('static.contact') }}">
-									CONTACT US
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<!-- end: TOP NAVIGATION CONTAINER -->
-			</div>
-		</header>
-		<!-- end: HEADER -->
-		<!-- start: MAIN CONTAINER -->
 		<div class="main-container">
-			<section class="page-top">
-				<div class="container">
-					<div class="col-md-4 col-sm-4">
-						<h1>Error</h1>
-					</div>
 
-				</div>
-			</section>
 			<section class="wrapper">
 				<div class="container">
 					<div class="row">
@@ -114,8 +57,8 @@
 									<br>
 									Check the URL you entered for any mistakes and try again.
 									<br>
-									<a href="{{ url_for('static.index') }}" class="btn btn-teal btn-return">
-										Return home
+									<a href="javascript:history.back()" class="btn btn-teal btn-return">
+										Go Back
 									</a>
 								</p>
 							</div>
@@ -125,127 +68,6 @@
 				</div>
 			</section>
 		</div>
-		<!-- end: MAIN CONTAINER -->
-		<!-- start: FOOTER -->
-		<footer id="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="col-md-3">
-						<div class="newsletter">
-							<h4>Mailing List</h4>
-							<p>
-								Please sign up to our mailing list to keep updated with new features.
-							</p>
-
-							<form action="//tronlogistics.us11.list-manage.com/subscribe/post?u=9b83ffbdcb29f07455558ba70&amp;id=1b339322d4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form validate" target="_blank" novalidate>
-								<div class="input-group">
-									<input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
-								    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-								    <div style="position: absolute; left: -5000px;"><input type="text" name="b_9b83ffbdcb29f07455558ba70_1b339322d4" tabindex="-1" value=""></div>
-								    <span class="input-group-btn">
-									    <button type="submit" class="btn btn-default" id="mc-embedded-subscribe">
-											Go!
-										</button>
-									</span>
-								</div>
-							</form>
-						</div>
-					</div>
-					<!--<div class="col-md-3">
-						<h4>Latest Tweet</h4>
-						<div class="twitter" id="tweet">
-							<i class="fa fa-twitter"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.
-							<a href="#" class="time">
-								12 Dec
-							</a>
-						</div>
-					</div>-->
-					<div class="col-md-2"></div>
-					<div class="col-md-3">
-						<div class="contact-details">
-							<h4>Contact Us</h4>
-							<ul class="contact">
-								<li>
-									<p>
-										<i class="fa fa-phone"></i><strong>Phone:</strong> (773) 969-6412
-									</p>
-								</li>
-								<li>
-									<p>
-										<i class="fa fa-envelope"></i><strong>Email:</strong>
-										<a href="mailto:contact@tronlogistics.com">
-											contact@tronlogistics.com
-										</a>
-									</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-md-2"></div>
-					<!--<div class="col-md-2">
-						<h4>Follow Us</h4>
-						<div class="social-icons">
-							<ul>
-								<li class="social-twitter tooltips" data-original-title="Twitter" data-placement="bottom">
-									<a target="_blank" href="http://www.twitter.com">
-										Twitter
-									</a>
-								</li>
-								<li class="social-facebook tooltips" data-original-title="Facebook" data-placement="bottom">
-									<a target="_blank" href="http://facebook.com" data-original-title="Facebook">
-										Facebook
-									</a>
-								</li>
-								<li class="social-linkedin tooltips" data-original-title="LinkedIn" data-placement="bottom">
-									<a target="_blank" href="http://linkedin.com" data-original-title="LinkedIn">
-										LinkedIn
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>-->
-				</div>
-			</div>
-			<div class="footer-copyright">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-2">
-							<!--<a class="logo" href="index.html">
-								<img src="{{ static('frontend/images/wht_logo_25x25_72ppi.png') }}">
-							</a>-->
-						</div>
-						<div class="col-md-6">
-							<p>
-								&copy; Copyright 2015 by Tron Logistics. All Rights Reserved.
-							</p>
-						</div>
-						<!--<div class="col-md-4">
-							<nav id="sub-menu">
-								<ul>
-									<li>
-										<a href="#">
-											FAQ's
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											Sitemap
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											Contact
-										</a>
-									</li>
-								</ul>
-							</nav>
-						</div>-->
-					</div>
-				</div>
-			</div>
-		</footer>
-		<a id="scroll-top" href="#"><i class="fa fa-angle-up"></i></a>
 		<!-- end: FOOTER -->
 		<!-- start: MAIN JAVASCRIPTS -->
 		<!--[if lt IE 9]>
