--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -130,13 +130,12 @@
 
                     map.controls[google.maps.ControlPosition.CENTER].push(myTextDiv);
                 }
-                else {
+                else if(allMarkers.length > 1) {
                     var bounds = new google.maps.LatLngBounds();
                     for(i=0; i < allMarkers.length; i++) {
                         bounds.extend(allMarkers[i].getPosition())
                     }
                     map.fitBounds(bounds)
-
                 }
             }
 
