--- a/app/templates/carrier/driver/view.html
+++ b/app/templates/carrier/driver/view.html
@@ -11,6 +11,10 @@
 			<table id="driver" class="table table-condensed">
 				<tbody>
 					<tr>
+						<td><b>Driver Type:</b></td>
+						<td>{{ driver.driver_type }}
+					</tr>
+					<tr>
 						<td><b>First Name:</b></td>
 						<td>{{ driver.first_name }}
 					</tr>
