--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <!-- Static navbar -->
-{% if user.is_authenticated() %}
+{% if g.user.is_authenticated() %}
 <div class="navbar navbar-inverse navbar-static-top">
       <!-- start: TOP NAVIGATION CONTAINER -->
       <div class="container">
