--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -64,6 +64,16 @@
 												<a href="{{ url_for('drivers.edit', driver_id=driver.id) }}" class="btn btn-primary">Edit</a>
 											{% endif %}
 										{% endif %}
+										{% if company is defined %}
+											{% if edit %}
+												<a class="btn btn-light-grey back-step " href="javascript:history.back()">
+													<i class="fa fa-circle-arrow-left"></i> Cancel
+												</a>
+												<label for="submit" class="btn btn-primary">Submit</label>
+											{% else %}
+												<a href="{{ url_for('org.create_user') }}" class="btn btn-primary">Add User</a>
+											{% endif %}
+										{% endif %}
 									</div>
 								</div>
 							</div>
