--- a/app/templates/carrier/driver/edit.html
+++ b/app/templates/carrier/driver/edit.html
@@ -50,13 +50,17 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Email<span class="symbol required"></span>
+							Email<span class="symbol required"></span> {{form.has_account.data }}
 							{% for error in form.email.errors %}
 					            <br><span style="color: red;">{{ error }}</span>
 					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
-							{{ form.email(size=50, placeholder="Email", class="form-control") }}
+							{% if form.has_account.data == True %}
+								{{ form.email(size=50, placeholder="Email", class="form-control", disabled="disabled") }}
+							{% else %}
+								{{ form.email(size=50, placeholder="Email", class="form-control") }}
+							{% endif %}
 						</div>
 					</div>
 					<div class="form-group">
@@ -65,6 +69,23 @@
 						</label>
 						<div class="col-sm-9">
 							{{ form.phone_number(class='input-mask-phone form-control') }}
+						</div>
+					</div>
+					<div class="form-group">
+						<label class="col-sm-3 control-label">
+							Create Account<span class="symbol required"></span>
+						</label>
+						<div class="col-sm-9">
+							<div class="checkbox">
+								<label>
+									{% if form.has_account.data == True %}
+										{{ form.has_account(class='grey', disabled='disabled') }}
+									{% else %}
+										{{ form.has_account(class='grey') }}
+									{% endif %}
+									
+								</label>
+							</div>
 						</div>
 					</div>
 					<hr>
