--- a/app/templates/org/user/create.html
+++ b/app/templates/org/user/create.html
@@ -10,42 +10,19 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<i class="fa fa-external-link-square"></i>
-					Create Driver
+					Create User
 				</div>
 				<div class="panel-body">
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Driver Type<span class="symbol required"></span>
+							Name<span class="symbol required"></span>
 
-					          {% for error in form.first_name.errors %}
+					          {% for error in form.name.errors %}
 					            <br><span style="color: red;">{{ error }}</span>
 					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
-							{{ form.driver_type(class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							First Name<span class="symbol required"></span>
-
-					          {% for error in form.first_name.errors %}
-					            <br><span style="color: red;">{{ error }}</span>
-					          {% endfor %}
-						</label>
-						<div class="col-sm-9">
-							{{ form.first_name(size=50, placeholder="First Name", class="form-control") }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label" for="origin_address1">
-							Last Name<span class="symbol required"></span>
-							{% for error in form.last_name.errors %}
-					            <br><span style="color: red;">{{ error }}</span>
-					          {% endfor %}
-						</label>
-						<div class="col-sm-9">
-							{{ form.last_name(size=50, placeholder="Last Name", class="form-control") }}
+							{{ form.name(class="form-control") }}
 						</div>
 					</div>
 					<div class="form-group">
@@ -61,22 +38,13 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label">
-							Phone<span class="symbol required"></span> <small class="text-warning">(999) 999-9999</small>
+							Role<span class="symbol required"></span>
+							{% for error in form.role.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
-							{{ form.phone_number(class='input-mask-phone form-control') }}
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="col-sm-3 control-label">
-							Create Account<span class="symbol required"></span>
-						</label>
-						<div class="col-sm-9">
-							<div class="checkbox">
-								<label>
-									{{ form.has_account(class='grey') }}
-								</label>
-							</div>
+							{{ form.role(class='form-control') }}
 						</div>
 					</div>
 					<hr>
