--- a/app/templates/emails/ping.html
+++ b/app/templates/emails/ping.html
@@ -1,6 +1,6 @@
 <p>Dear {{ driver.get_full_name() }},</p>
 
-<p>Please check in by clicking here: {{ url_for('trucks.check_in', activation_slug=activation_slug, _external=True) }}</p>
+<p>Please check in by clicking here: {{ url_for('trucks.check_in', _external=True) }}</p>
 
 <p>Regards,</p>
 
