Disabled user login check

--- a/app/templates/auth/create_password.html
+++ b/app/templates/auth/create_password.html
@@ -46,7 +46,18 @@
         
 
 <div class="login example1">
-	
+		<div class="main-login col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
+			<div class="logo">Tron Logistics
+			</div>
+			{% with messages = get_flashed_messages() %}
+						{% if messages %}
+					    	{% for message in messages %}
+					    		<div class="alert alert-warning" role="alert">{{ message }}</div>
+					    	{% endfor %}
+					  	{% endif %}
+					{% endwith %}
+			<!-- start: LOGIN BOX -->
+			<!-- start: RESET PASSWORD BOX -->
 			<div class="box-reset">
 				<h3>Create Password</h3>
 				<p>
