--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -108,6 +108,17 @@
 							<div class="col-sm-10">
 								<div class="form-group">
 									<label class="col-sm-3 control-label">
+										Load # <span class="symbol required"></span>
+										{% for error in form.load_type.errors %}
+								            <br><span style="color: red;">{{ error }}</span>
+							          	{% endfor %}
+									</label>
+									<div class="col-sm-7">
+										{{ form.name(class="form-control") }}
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
 										Load Type <span class="symbol required"></span>
 										{% for error in form.load_type.errors %}
 					            <br><span style="color: red;">{{ error }}</span>
